fix list item overflow

--- a/_sass/landing/landing-additional-setup.scss
+++ b/_sass/landing/landing-additional-setup.scss
@@ -8,6 +8,7 @@
   .ul {
     flex: 0 0 50%;
     list-style: none;
+    overflow: hidden;
     padding: 0;
 
     @include media(md) {
